Bug 1601347 - Fix reverse search input jumpiness. r=Honza.
Making the reverse search input not taking into account
for the editor grid layout.
This meant we needed to group icons in their own
element to be able to wrap.

Differential Revision: https://phabricator.services.mozilla.com/D61395

UltraBlame original commit: a0889f3d773e3280266bc31749bae8655374e28e

--- a/devtools/client/webconsole/components/Input/ReverseSearchInput.css
+++ b/devtools/client/webconsole/components/Input/ReverseSearchInput.css
@@ -283,6 +283,24 @@ bidi
 :
 plaintext
 ;
+min
+-
+width
+:
+80px
+;
+flex
+-
+shrink
+:
+1
+;
+flex
+-
+basis
+:
+0
+;
 }
 .
 reverse
@@ -450,6 +468,30 @@ checked
 -
 color
 )
+;
+}
+.
+reverse
+-
+search
+-
+actions
+{
+flex
+-
+shrink
+:
+0
+;
+display
+:
+flex
+;
+align
+-
+items
+:
+baseline
 ;
 }
 .
